Webapp: Prevent text wrapping in buttons
Prevent wrapping text in `<input type="button">` elements.

Pull Request: https://projects.blender.org/studio/flamenco/pulls/104427

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -435,6 +435,7 @@ button, input[type='button'], .btn {
   transition-duration: var(--transition-speed);
   transition-property: background-color, border-color, color;
   user-select: none;
+  white-space: nowrap;
 }
 
 .btn-lg {
